# LLA

./: .clang-tidy  CMakeLists.txt  README.md
apps/: LlaBench.cxx
cmake/: LLAConfig.cmake.in
doc/: doxyfile.in
include/Lla/: Exception.h  InterprocessLockInterface.h  Lla.h  LockParameters.h  Session.h  SessionParameters.h
include/Lla/ParameterTypes/: LockType.h
src/: InterprocessLockBase.cxx  InterprocessLockBase.h  InterprocessLockFactory.cxx  InterprocessLockFactory.h  LockParameters.cxx  Logger.h  NamedMutex.cxx  NamedMutex.h  PythonInterface.cxx  Session.cxx  SessionParameters.cxx  SocketLock.cxx  SocketLock.h  example.cxx  example.py
test/: TestLock.cxx  TestSession.cxx
